[package]
name = "wsel"
version = "0.1.0"
authors = ["shua <itis@isthisa.email>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-protocols = { version = "0.28.0", features = ["unstable_protocols", "client"] }
wayland-client = "0.28.0"
libc = "0.2.79"
nix = "0.18.0"
rusttype = "0.9.2"
anyhow = "1.0.34"
