[package]
name = "wsel"
version = "0.1.0"
authors = ["shua <itis@isthisa.email>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-protocols = { version = "0.29.4", features = ["unstable_protocols", "client"] }
wayland-client = "0.29.4"
libc = "0.2.121"
nix = "0.23.1"
rusttype = "0.9.2"
anyhow = "1.0.56"
